tests/ui/pinned_drop/forget-pinned-drop.stderr
error[E0277]: the trait bound `Foo: pin_project::__private::PinnedDrop` is not satisfied
 --> $DIR/forget-pinned-drop.rs:3:15
  |
3 | #[pin_project(PinnedDrop)] //~ ERROR E0277
  |               ^^^^^^^^^^ the trait `pin_project::__private::PinnedDrop` is not implemented for `Foo`
  |
  = note: required by `pin_project::__private::PinnedDrop::drop`
